# MyLab-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml
app/: __init__.py  config.py  demo_data.py  main.py  qr_codes.py  reporting.py  repository.py
app/static/: admin.css
app/templates/: admin_console.html
data/: patients.json
data/results/: ava-allergy-2026-03-05.json  ava-celiac-2025-12-22.json  ava-electrolytes-2025-11-18.json  ava-urinalysis-2026-01-29.json  ava-vitamin-b6-2026-02-12.json  ben-psa-2026-02-10.json  emma-cbc-2025-08-06.json  emma-cbc-2025-12-04.json  emma-cbc-2026-03-04.json  emma-ferritin-2026-01-22.json  emma-lipid-2025-12-18.json  emma-thyroid-2026-02-14.json  emma-vitamin-d-2025-08-14.json  emma-vitamin-d-2025-11-21.json  emma-vitamin-d-2026-03-01.json  liam-glucose-2025-08-28.json  liam-glucose-2025-12-01.json  liam-glucose-2026-03-05.json  liam-hba1c-2026-02-02.json  liam-kidney-2025-11-30.json  liam-liver-2026-01-19.json  noah-cholesterol-2025-08-26.json  noah-cholesterol-2025-12-02.json  noah-cholesterol-2026-03-03.json  noah-crp-2026-02-20.json  sophia-b12-2026-01-15.json  sophia-iron-2026-02-25.json  sophia-prenatal-2026-03-06.json
tests/: test_api.py
